<?xml version="1.0"?>
<package format="2">
  <name>mru_transform</name>
  <version>0.0.0</version>
  <description>The mru_transform package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>project11</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>mru_transform_interfaces</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
